@@ -25,8 +25,9 @@ netcfg (1.13) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Add description for internal-usb template as used for usb net.
+  * Fix fallthrough on missing template.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 16 Aug 2005 16:00:33 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 16 Aug 2005 17:19:44 -0400
 
 netcfg (1.12) unstable; urgency=low
 
